--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,20 @@
-<table>
-  <tr *ngFor='let x of names'>
-    <td>{{x.name}}</td>
-    <td>{{x.id}}</td>
-  </tr>
-</table>
+<table class="table">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Began Course</th>
+      <th>Finish Course</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor='let x of names'>
+      <td>{{x._id}}</td>
+      <td>{{x.Name}}</td>
+      <td>{{x.StartDate}}</td>
+      <td>{{x.EndDate}}</td>
+      <th><i class="fa fa-pencil icon" aria-hidden="true"></i><i class="fa fa-book icon" aria-hidden="true"></i><i class="fa fa-trash icon" aria-hidden="true"></i></th>
+    </tr>
+  </tbody>
+</table> 
