--- a/src/app/Components/Students/app.component.html
+++ b/src/app/Components/Students/app.component.html
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor='let x of names'>
+    <tr *ngFor='let x of students'>
       <td>{{x._id}}</td>
       <td>{{x.Name}}</td>
       <td>{{x.StartDate}}</td>
