--- a/src/app/Components/master/master.component.html
+++ b/src/app/Components/master/master.component.html
@@ -1,20 +1,20 @@
 <div style="background-color: #2196F3 !important; color: white;" class="row shadow-sm p-3 mb-5 bg-light">
-  <div class="col-md-6">
+  <div class="col-md-6 button" [routerLink]="['/']">
       <h5 style="font-weight: 300"><i class="fa fa-book icon" aria-hidden="true"></i>Student Info</h5>
   </div>
   <div class="row col-md-6">
     <div class="col-md-3">
 
     </div>
-    <div class="col-md-3" [routerLink]="['/AddStudent']">
-      <i class="fa fa-pencil icon" aria-hidden="true"></i>Add Student
-    </div>
     <div class="col-md-3">
-      <i class="fa fa-user icon" aria-hidden="true"></i>Other
+
     </div>
-    <div class="col-md-3">
-      <i class="fa fa-table icon" aria-hidden="true"></i>Buttons
+    <div class="col-md-3 button" [routerLink]="['/']">
+      <i class="fa fa-user icon" aria-hidden="true"></i>Students
     </div>
+    <div class="col-md-3 button" [routerLink]="['/Classes']">
+      <i class="fa fa-book icon" aria-hidden="true"></i>Classes
+    </div> 
   </div>
 </div>
 <div>
